# SSW

./: .cmake-format.json  .gitignore  CMakeLists.txt  README.md  imgui.ini
App/: CMakeLists.txt
App/src/: EditorLayer.cpp  EditorLayer.h  main.cpp
App/src/Calculations/: Calculations.cpp  Calculations.h  Steps.cpp  Steps.h
App/src/Graphics/: GraphicsUtils.cpp  GraphicsUtils.h  SimpleRenderable2D.cpp  SimpleRenderable2D.h
App/src/Gui/: CustomGui.cpp  CustomGui.h
App/src/Math/: Angle.cpp  Angle.h  Intersections.cpp  Intersections.h  Length.cpp  Length.h
Engine/: CMakeLists.txt
Engine/src/Engine/Buffers/: BufferLayout.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Engine/src/Engine/Layers/: ImGuiLayer.cpp
Engine/src/Engine/Shader/: Shader.cpp  Shader.h  ShaderDataType.h  ShaderLayout.cpp  ShaderLayout.h
Engine/src/Engine/Textures/: Texture2D.cpp  Texture2D.h
Engine/src/Platform/OpenGL/Core/: GLFWWindow.cpp  GLFWWindow.h
Engine/src/Platform/OpenGL/Shader/: OGLShader.cpp  OGLShader.h
Engine/src/Platform/OpenGL4/Buffers/: OGL4FrameBuffer.cpp  OGL4FrameBuffer.h  OGL4IndexBuffer.cpp  OGL4IndexBuffer.h  OGL4ShaderStorageBuffer.cpp  OGL4ShaderStorageBuffer.h  OGL4VertexArray.cpp  OGL4VertexArray.h  OGL4VertexBuffer.cpp  OGL4VertexBuffer.h
Engine/src/Platform/OpenGL4/Textures/: OGL4Texture2D.cpp  OGL4Texture2D.h
assets/shaders/: test.frag  test.vert
